--- a/assets/Style/Style.css
+++ b/assets/Style/Style.css
@@ -324,6 +324,7 @@ body {
 
 @media screen and (max-width: 500px) {
   #switch .toggleWrapper {
+    top: 50%;
     margin: 100px 0;
     padding-top: 100px;
     padding-bottom: 100px;
@@ -566,80 +567,5 @@ body {
 #switch input:checked + .toggle .star--6 {
   -webkit-transition: all 300ms 400ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
   transition: all 300ms 400ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
-}
-
-#luv *,
-#luv *:before,
-#luv *:after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-#luv html,
-#luv body {
-  min-height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: #FFC568;
-  font-size: 62.5%;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-@media screen and (max-width: 520px) {
-  #luv html,
-  #luv body {
-    /* don't know how to set default units to rem in mojs :(( */
-  }
-}
-
-#luv .container {
-  width: 50rem;
-  height: 20rem;
-  position: relative;
-}
-
-#luv .svg-container {
-  z-index: 2;
-  position: absolute;
-}
-
-#luv .mo-container {
-  width: 100%;
-  height: 100%;
-}
-
-#luv .line {
-  fill: none;
-  stroke: #FFFFFF;
-  stroke-width: 8;
-  stroke-linecap: round;
-  stroke-miterlimit: 10;
-}
-
-#luv .lttr {
-  fill: #763C8C;
-}
-
-#luv .sound {
-  position: fixed;
-  color: #763C8C;
-  font-size: 1.6rem;
-  bottom: 1rem;
-  right: 1rem;
-  text-decoration: underline;
-  cursor: default;
-}
-
-#luv .sound--off {
-  text-decoration: line-through;
 }
 /*# sourceMappingURL=Style.css.map */
