--- a/assets/Style/Style.scss
+++ b/assets/Style/Style.scss
@@ -180,6 +180,7 @@ body {
     }
     @media screen and (max-width:500px) {
         .toggleWrapper {
+            top: 50%;
             margin: 100px 0;
             padding-top: 100px;
             padding-bottom: 100px;
