--- a/assets/Style/Style.css
+++ b/assets/Style/Style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Bad+Script);
 #love_heart h1 {
   position: relative;
@@ -324,10 +325,8 @@ body {
 
 @media screen and (max-width: 500px) {
   #switch .toggleWrapper {
-    top: 50%;
     margin: 100px 0;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding: 100px;
   }
 }
 
@@ -567,5 +566,491 @@ body {
 #switch input:checked + .toggle .star--6 {
   -webkit-transition: all 300ms 400ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
   transition: all 300ms 400ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+}
+
+#box {
+  position: relative;
+  margin-top: 200px;
+  margin-bottom: 500px;
+}
+
+#box #power {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#box #power .power-switch {
+  --color-invert: #ffffff;
+  --width: 150px;
+  --height: 150px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: var(--width);
+  height: var(--height);
+}
+
+#box #power .power-switch .button {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+#box #power .power-switch .button:after {
+  content: "";
+  width: 500%;
+  height: 500%;
+  position: absolute;
+  background: radial-gradient(circle closest-side, var(--color-invert), transparent);
+  -webkit-filter: blur(20px);
+          filter: blur(20px);
+  opacity: 0;
+  -webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
+  transition: opacity 1s ease, -webkit-transform 1s ease;
+  transition: opacity 1s ease, transform 1s ease;
+  transition: opacity 1s ease, transform 1s ease, -webkit-transform 1s ease;
+  -webkit-transform: perspective(1px) translateZ(0);
+          transform: perspective(1px) translateZ(0);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+#box #power .power-switch .button .power-on,
+#box #power .power-switch .button .power-off {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  fill: none;
+  stroke: var(--color-invert);
+  stroke-width: 8px;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
+
+#box #power .power-switch .button .power-on .line,
+#box #power .power-switch .button .power-off .line {
+  opacity: .2;
+}
+
+#box #power .power-switch .button .power-on .circle,
+#box #power .power-switch .button .power-off .circle {
+  opacity: .2;
+  -webkit-transform: rotate(-58deg);
+          transform: rotate(-58deg);
+  -webkit-transform-origin: center 80px;
+          transform-origin: center 80px;
+  stroke-dasharray: 220;
+  stroke-dashoffset: 40;
+}
+
+#box #power .power-switch .button .power-on {
+  -webkit-filter: drop-shadow(0px 0px 6px rgba(255, 255, 255, 0.8));
+          filter: drop-shadow(0px 0px 6px rgba(255, 255, 255, 0.8));
+}
+
+#box #power .power-switch .button .power-on .line {
+  opacity: 0;
+  -webkit-transition: opacity .3s ease 1s;
+  transition: opacity .3s ease 1s;
+}
+
+#box #power .power-switch .button .power-on .circle {
+  opacity: 1;
+  stroke-dashoffset: 220;
+  -webkit-transition: stroke-dashoffset 1s ease 0s, -webkit-transform 0s ease;
+  transition: stroke-dashoffset 1s ease 0s, -webkit-transform 0s ease;
+  transition: transform 0s ease, stroke-dashoffset 1s ease 0s;
+  transition: transform 0s ease, stroke-dashoffset 1s ease 0s, -webkit-transform 0s ease;
+}
+
+#box #power .power-switch input {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 2;
+  cursor: pointer;
+  opacity: 0;
+}
+
+#box #power .power-switch input:checked + .button:after {
+  opacity: 0.15;
+  -webkit-transform: scale(2) perspective(1px) translateZ(0);
+          transform: scale(2) perspective(1px) translateZ(0);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transition: opacity .5s ease, -webkit-transform .5s ease;
+  transition: opacity .5s ease, -webkit-transform .5s ease;
+  transition: opacity .5s ease, transform .5s ease;
+  transition: opacity .5s ease, transform .5s ease, -webkit-transform .5s ease;
+}
+
+#box #power .power-switch input:checked + .button .power-on,
+#box #power .power-switch input:checked + .button .power-off {
+  -webkit-animation: click-animation .3s ease forwards;
+          animation: click-animation .3s ease forwards;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+#box #power .power-switch input:checked + .button .power-on .line,
+#box #power .power-switch input:checked + .button .power-off .line {
+  -webkit-animation: line-animation .8s ease-in forwards;
+          animation: line-animation .8s ease-in forwards;
+}
+
+#box #power .power-switch input:checked + .button .power-on .circle,
+#box #power .power-switch input:checked + .button .power-off .circle {
+  -webkit-transform: rotate(302deg);
+          transform: rotate(302deg);
+}
+
+#box #power .power-switch input:checked + .button .power-on .line {
+  opacity: 1;
+  -webkit-transition: opacity .05s ease-in .55s;
+  transition: opacity .05s ease-in .55s;
+}
+
+#box #power .power-switch input:checked + .button .power-on .circle {
+  -webkit-transform: rotate(302deg);
+          transform: rotate(302deg);
+  stroke-dashoffset: 40;
+  -webkit-transition: stroke-dashoffset .4s ease .2s, -webkit-transform .4s ease .2s;
+  transition: stroke-dashoffset .4s ease .2s, -webkit-transform .4s ease .2s;
+  transition: transform .4s ease .2s, stroke-dashoffset .4s ease .2s;
+  transition: transform .4s ease .2s, stroke-dashoffset .4s ease .2s, -webkit-transform .4s ease .2s;
+}
+
+@-webkit-keyframes line-animation {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  10% {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  40% {
+    -webkit-transform: translateY(-25px);
+            transform: translateY(-25px);
+  }
+  60% {
+    -webkit-transform: translateY(-25px);
+            transform: translateY(-25px);
+  }
+  85% {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@keyframes line-animation {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  10% {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  40% {
+    -webkit-transform: translateY(-25px);
+            transform: translateY(-25px);
+  }
+  60% {
+    -webkit-transform: translateY(-25px);
+            transform: translateY(-25px);
+  }
+  85% {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@-webkit-keyframes click-animation {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes click-animation {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+#box #power body {
+  background: #1B1A23;
+  height: 100vh;
+  font: 400 16px 'Poppins', sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#box #power body .socials {
+  position: fixed;
+  display: block;
+  left: 20px;
+  bottom: 20px;
+}
+
+#box #power body .socials > a {
+  display: block;
+  width: 30px;
+  opacity: .2;
+  -webkit-transform: scale(var(--scale, 0.8));
+          transform: scale(var(--scale, 0.8));
+  -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.38, -0.12, 0.24, 1.91);
+  transition: -webkit-transform 0.3s cubic-bezier(0.38, -0.12, 0.24, 1.91);
+  transition: transform 0.3s cubic-bezier(0.38, -0.12, 0.24, 1.91);
+  transition: transform 0.3s cubic-bezier(0.38, -0.12, 0.24, 1.91), -webkit-transform 0.3s cubic-bezier(0.38, -0.12, 0.24, 1.91);
+}
+
+#box #power body .socials > a:hover {
+  --scale: 1;
+}
+
+#box .container {
+  background: #333b46;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#box .box {
+  border-radius: 20px;
+  width: 60px;
+  height: 60px;
+  background: #1a1e24;
+  -webkit-animation: anime 3s cubic-bezier(0.16, 1, 0.3, 1);
+          animation: anime 3s cubic-bezier(0.16, 1, 0.3, 1);
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+#box .box h1 {
+  padding: 30px;
+  font-family: "Bad Script";
+  color: #1a1e24;
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  opacity: 0;
+  -webkit-animation: text-anime 3s;
+          animation: text-anime 3s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes text-anime {
+  0% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes text-anime {
+  0% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes anime {
+  0% {
+    width: 60px;
+    height: 60px;
+  }
+  25% {
+    width: 60px;
+    height: 60px;
+  }
+  50% {
+    width: 60px;
+    height: 240px;
+  }
+  100% {
+    width: 480px;
+    height: 240px;
+  }
+}
+
+@keyframes anime {
+  0% {
+    width: 60px;
+    height: 60px;
+  }
+  25% {
+    width: 60px;
+    height: 60px;
+  }
+  50% {
+    width: 60px;
+    height: 240px;
+  }
+  100% {
+    width: 480px;
+    height: 240px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #box {
+    top: 250px;
+    padding-top: 100px;
+  }
+}
+
+#arrow {
+  position: relative;
+  height: 100px;
+  top: 150px;
+  padding: 100px 0;
+}
+
+#arrow .arrows {
+  width: 60px;
+  height: 72px;
+  position: absolute;
+  left: 50%;
+  margin-left: -30px;
+  bottom: 20px;
+}
+
+#arrow .arrows path {
+  stroke: #de4747;
+  fill: transparent;
+  stroke-width: 1px;
+  animation: arrow 2s infinite;
+  -webkit-animation: arrow 2s infinite;
+}
+
+@keyframes arrow {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes arrow/*Safari and Chrome*/ {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+#arrow .arrows path.a1 {
+  animation-delay: -1s;
+  -webkit-animation-delay: -1s;
+  /* Safari 和 Chrome */
+}
+
+#arrow .arrows path.a2 {
+  animation-delay: -0.5s;
+  -webkit-animation-delay: -0.5s;
+  /* Safari 和 Chrome */
+}
+
+#arrow .arrows path.a3 {
+  animation-delay: 0s;
+  -webkit-animation-delay: 0s;
+  /* Safari 和 Chrome */
+}
+
+@media screen and (max-width: 500px) {
+  #arrow {
+    top: 400px;
+  }
 }
 /*# sourceMappingURL=Style.css.map */
