--- a/assets/Style/Style.scss
+++ b/assets/Style/Style.scss
@@ -180,10 +180,8 @@ body {
     }
     @media screen and (max-width:500px) {
         .toggleWrapper {
-            top: 50%;
             margin: 100px 0;
-            padding-top: 100px;
-            padding-bottom: 100px;
+            padding: 100px;
         }
     }
     .toggle {
@@ -373,5 +371,311 @@ body {
                 transition: all 300ms 400ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
             }
         }
+    }
+}
+
+#box {
+    #power {
+        display: flex;
+        justify-content: center;
+        .power-switch {
+            --color-invert: #ffffff;
+            --width: 150px;
+            --height: 150px;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: var(--width);
+            height: var(--height);
+            .button {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: relative;
+                &:after {
+                    content: "";
+                    width: 500%;
+                    height: 500%;
+                    position: absolute;
+                    background: radial-gradient(circle closest-side, var(--color-invert), transparent);
+                    filter: blur(20px);
+                    opacity: 0;
+                    transition: opacity 1s ease, transform 1s ease;
+                    transform: perspective(1px) translateZ(0);
+                    backface-visibility: hidden;
+                }
+                .power-on,
+                .power-off {
+                    height: 100%;
+                    width: 100%;
+                    position: absolute;
+                    z-index: 1;
+                    fill: none;
+                    stroke: var(--color-invert);
+                    stroke-width: 8px;
+                    stroke-linecap: round;
+                    stroke-linejoin: round;
+                    .line {
+                        opacity: .2;
+                    }
+                    .circle {
+                        opacity: .2;
+                        transform: rotate(-58deg);
+                        transform-origin: center 80px;
+                        stroke-dasharray: 220;
+                        stroke-dashoffset: 40;
+                    }
+                }
+                .power-on {
+                    filter: drop-shadow(0px 0px 6px rgba(255, 255, 255, .8));
+                    .line {
+                        opacity: 0;
+                        transition: opacity .3s ease 1s;
+                    }
+                    .circle {
+                        opacity: 1;
+                        stroke-dashoffset: 220;
+                        transition: transform 0s ease, stroke-dashoffset 1s ease 0s;
+                    }
+                }
+            }
+            input {
+                position: absolute;
+                height: 100%;
+                width: 100%;
+                z-index: 2;
+                cursor: pointer;
+                opacity: 0;
+                &:checked {
+                    +.button {
+                        &:after {
+                            opacity: 0.15;
+                            transform: scale(2) perspective(1px) translateZ(0);
+                            backface-visibility: hidden;
+                            transition: opacity .5s ease, transform .5s ease;
+                        }
+                        .power-on,
+                        .power-off {
+                            animation: click-animation .3s ease forwards;
+                            transform: scale(1);
+                            .line {
+                                animation: line-animation .8s ease-in forwards;
+                            }
+                            .circle {
+                                transform: rotate(302deg);
+                            }
+                        }
+                        .power-on {
+                            .line {
+                                opacity: 1;
+                                transition: opacity .05s ease-in .55s;
+                            }
+                            .circle {
+                                transform: rotate(302deg);
+                                stroke-dashoffset: 40;
+                                transition: transform .4s ease .2s, stroke-dashoffset .4s ease .2s;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        @keyframes line-animation {
+            0% {
+                transform: translateY(0);
+            }
+            10% {
+                transform: translateY(10px);
+            }
+            40% {
+                transform: translateY(-25px);
+            }
+            60% {
+                transform: translateY(-25px);
+            }
+            85% {
+                transform: translateY(10px);
+            }
+            100% {
+                transform: translateY(0px);
+            }
+        }
+        @keyframes click-animation {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(.9);
+            }
+            100% {
+                transform: scale(1);
+            }
+        }
+        //--- ## BASIC #############
+        body {
+            background: #1B1A23;
+            height: 100vh;
+            font: 400 16px 'Poppins', sans-serif;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            .socials {
+                position: fixed;
+                display: block;
+                left: 20px;
+                bottom: 20px;
+                >a {
+                    display: block;
+                    width: 30px;
+                    opacity: .2;
+                    transform: scale(var(--scale, .8));
+                    transition: transform .3s cubic-bezier(0.38, -0.12, 0.24, 1.91);
+                    &:hover {
+                        --scale: 1;
+                    }
+                }
+            }
+        }
+    }
+    position: relative;
+    margin-top: 200px;
+    margin-bottom: 500px;
+    .container {
+        background: #333b46;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .box {
+        border-radius: 20px;
+        width: 60px;
+        height: 60px;
+        background: #1a1e24;
+        animation: anime 3s cubic-bezier(0.16, 1, 0.3, 1);
+        animation-fill-mode: forwards;
+        h1 {
+            padding: 30px;
+            font-family: "Bad Script";
+            color: #1a1e24;
+            text-align: center;
+            font-size: 30px;
+            font-weight: bold;
+            opacity: 0;
+            animation: text-anime 3s;
+            animation-fill-mode: forwards;
+        }
+        @keyframes text-anime {
+            0% {
+                opacity: 0;
+            }
+            75% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+    }
+    @keyframes anime {
+        0% {
+            width: 60px;
+            height: 60px;
+        }
+        25% {
+            width: 60px;
+            height: 60px;
+        }
+        50% {
+            width: 60px;
+            height: 240px;
+        }
+        100% {
+            width: 480px;
+            height: 240px;
+        }
+    }
+}
+
+@media screen and (max-width:500px) {
+    #box {
+        top: 250px;
+        padding-top: 100px;
+    }
+}
+
+#arrow {
+    position: relative;
+    height: 100px;
+    top: 150px;
+    padding: 100px 0;
+    .arrows {
+        width: 60px;
+        height: 72px;
+        position: absolute;
+        left: 50%;
+        margin-left: -30px;
+        bottom: 20px;
+    }
+    .arrows path {
+        stroke: #de4747;
+        fill: transparent;
+        stroke-width: 1px;
+        animation: arrow 2s infinite;
+        -webkit-animation: arrow 2s infinite;
+    }
+    @keyframes arrow {
+        0% {
+            opacity: 0
+        }
+        40% {
+            opacity: 1
+        }
+        80% {
+            opacity: 0
+        }
+        100% {
+            opacity: 0
+        }
+    }
+    @-webkit-keyframes arrow/*Safari and Chrome*/
+    {
+        0% {
+            opacity: 0
+        }
+        40% {
+            opacity: 1
+        }
+        80% {
+            opacity: 0
+        }
+        100% {
+            opacity: 0
+        }
+    }
+    .arrows path.a1 {
+        animation-delay: -1s;
+        -webkit-animation-delay: -1s;
+        /* Safari 和 Chrome */
+    }
+    .arrows path.a2 {
+        animation-delay: -0.5s;
+        -webkit-animation-delay: -0.5s;
+        /* Safari 和 Chrome */
+    }
+    .arrows path.a3 {
+        animation-delay: 0s;
+        -webkit-animation-delay: 0s;
+        /* Safari 和 Chrome */
+    }
+}
+
+@media screen and (max-width:500px) {
+    #arrow {
+        top: 400px;
     }
 }
