--- a/assets/Style/Style.scss
+++ b/assets/Style/Style.scss
@@ -591,3 +591,44 @@ body {
         /* Safari 和 Chrome */
     }
 }
+
+#ghost {
+    box-sizing: border-box;
+    margin: 100px 0;
+    .container {
+        text-align: center;
+    }
+    .ghost {
+        animation: float 3s ease-out infinite;
+    }
+    @keyframes float {
+        50% {
+            transform: translate(0, 20px);
+        }
+    }
+    .shadowFrame {
+        width: 130px;
+        margin: 15px 0;
+    }
+    .shadow {
+        animation: shrink 3s ease-out infinite;
+        transform-origin: center center;
+        ellipse {
+            transform-origin: center center;
+        }
+    }
+    @keyframes shrink {
+        0% {
+            width: 90%;
+            margin: 0 5%;
+        }
+        50% {
+            width: 60%;
+            margin: 0 18%;
+        }
+        100% {
+            width: 90%;
+            margin: 0 5%;
+        }
+    }
+}
