--- a/assets/Style/Style.scss
+++ b/assets/Style/Style.scss
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Bad+Script);
+@import url(https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&display=swap);
 body {
     background-color: #333b46;
     font-family: 'Helvetica Rounded', 'Arial Rounded MT Bold', 'Montserrat', sans-serif;
@@ -630,5 +631,77 @@ body {
             width: 90%;
             margin: 0 5%;
         }
+    }
+}
+
+#photos {
+    margin: 100px 0;
+    .item {
+        width: 50%;
+        position: relative;
+        background-size: cover;
+        border-radius: 10px;
+        margin: 25px 0;
+    }
+    .item1 {
+        background-image: url(../Image/1.png);
+        padding-top: 66%;
+        &:before {
+            content: "Ánh mắt với nụ cười với bờ môi...";
+            font-family: "Open Sans Condensed";
+            color: #de4747;
+            font-size: 5rem;
+            position: absolute;
+            right: -50%;
+            transform: translateX(50%) translateY(-50%);
+            top: 50%;
+            max-width: 80%;
+        }
+    }
+    .item2 {
+        background-image: url(../Image/2.png);
+        padding-top: 66%;
+        left: 50%;
+        &:before {
+            content: "Sự quyến rũ làm tim em bối rối...";
+            font-family: "Open Sans Condensed";
+            color: #de4747;
+            font-size: 5rem;
+            position: absolute;
+            left: -50%;
+            transform: translateX(-50%) translateY(-50%);
+            top: 50%;
+            max-width: 80%;
+        }
+    }
+    .item3 {
+        background-image: url(../Image/133303495_150716856545677_1310140808780131021_n.jpg);
+        padding-top: 66%;
+        &:before {
+            content: "Mỗi lần chị lướt nhẹ qua em thôi, em nhớ cả ngày cho tới tận đêm tối.";
+            font-family: "Open Sans Condensed";
+            color: #de4747;
+            font-size: 5rem;
+            position: absolute;
+            right: -50%;
+            transform: translateX(50%) translateY(-50%);
+            top: 50%;
+            max-width: 80%;
+        }
+    }
+    .scrollFade {
+        opacity: 1;
+        pointer-events: all;
+    }
+    .scrollFade--hidden {
+        opacity: 0;
+        pointer-events: none;
+    }
+    .scrollFade--visible {
+        opacity: 1;
+        pointer-events: all;
+    }
+    .scrollFade--animate {
+        transition: opacity 0.4s ease-in-out;
     }
 }
